# steno

./: CLAUDE.md  DOKPLOY_DEPLOYMENT.md  Dockerfile  OVERVIEW.md  README.md  docker-compose.dokploy.yml  docker-compose.yml  main.py  notes  pyproject.toml
whisper/: Dockerfile  app.py  models.py  ollama_client.py  transcription.py  video_processing.py
whisper/static/: app.js  index.html  styles.css
